5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1613_1800.log
== TEST (2019-03-30 23:39:50) 
-- CODE:
var = float(input("Digite a,b e c: "))
f = (a**2) + (b**2) + (c**2) / (a + b + c)
print(round(f, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f = (a**2) + (b**2) + (c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:41:09) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float((input"Digite c: "))
f = (a**2) + (b**2) + (c**2) / (a + b + c)
print(round(f, 7))
-- ERROR:
File "XXXX", line 3
    c = float((input"Digite c: "))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:41:50) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
f = (a**2) + (b**2) + (c**2) / (a + b + c)
print(round(f, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:42:05) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
f = (a**2) + (b**2) + (c**2) / (a + b + c)
print(round(f, 7))
-- EXECUTION TIME:
0.127129
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:44:58) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
f = (a**2 + b**2 + c**2) / (a + b + c)
print(round(f, 7))
-- EXECUTION TIME:
0.206745
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
